<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GiaoDien.ResetPassActivity"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="127dp">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:text="Đăng Ký \n   Môn Học"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="35sp" />

                <ImageView
                    android:layout_width="134dp"
                    android:layout_height="109dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/dangky" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:padding="5dp"
                        style="@style/viewParent.headerText.settingsMiniTitle"
                        android:text="@string/monhoc_hint"/>
                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        />
                    <TextView
                        android:padding="5dp"
                        style="@style/viewParent.headerText.settingsMiniTitle"
                        android:text="@string/lophoc_hint"/>
                    <Spinner
                        android:id="@+id/spinnerLop"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        />
                    <TextView
                        android:padding="5dp"
                        style="@style/viewParent.headerText.settingsMiniTitle"
                        android:text="@string/ngayhoc_hint"/>

                    <TextView
                        android:id="@+id/tvNgayHoc"
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                    <TextView
                        android:padding="5dp"
                        style="@style/viewParent.headerText.settingsMiniTitle"
                        android:text="@string/giangvien_hint"/>

                    <TextView
                        android:id="@+id/tvGiangVien"
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                    <TextView
                        android:padding="5dp"
                        style="@style/viewParent.headerText.settingsMiniTitle"
                        android:text="@string/cahoc_hint"/>

                    <TextView
                        android:id="@+id/tvCaHoc"
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="20sp" />


                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:id="@+id/btnSaveInForm"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="Lưu"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_color="#FFF"
                        app:spinning_bar_padding="6dp"
                        app:spinning_bar_width="4dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"/>
    <ImageView
        android:id="@+id/imgbackdk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="false"
        android:src="@drawable/ic_back_2" />

</RelativeLayout>